Fix design issues + add integration tests